--- a/environment.yml
+++ b/environment.yml
@@ -129,7 +129,6 @@ dependencies:
   - torchvision=0.11.3=py36_cpu
   - tornado=6.1=py36h2bbff1b_0
   - traitlets=4.3.3=py36haa95532_0
-  - trainsformers=
   - typing_extensions=4.1.1=pyh06a4308_0
   - urllib3=1.26.8=pyhd3eb1b0_0
   - vc=14.2=h21ff451_1
@@ -211,6 +210,7 @@ dependencies:
     - tifffile==2020.9.3
     - torch==1.10.2+cpu
     - torchmetrics==0.8.2
+    - transformers==4.42.4
     - tqdm==4.64.1
     - werkzeug==2.0.3
     - yarg==0.1.9
